# Valence

./: CMakeLists.txt  README.md  ValenceV1.iss  app.rc  editor_view.cpp  editor_view.h  main.cpp  main_window.cpp  main_window.h  text_buffer.cpp  text_buffer.h  window.cpp  window.h
docs/: Valence_Version_Report.docx  Version Report.docx  ~$lence_Version_Report.docx  ~$rsion Report.docx
src/: main.cpp
src/core/: selection.h  text_buffer.cpp  text_buffer.h  undo_manager.cpp  undo_manager.h
src/editor/: cpp_highlighter.cpp  cpp_highlighter.h  editor_widget.cpp  editor_widget.h
src/theme/: theme.h
src/ui/: file_explorer.cpp  file_explorer.h  main_window.cpp  main_window.h  status_bar.cpp  status_bar.h  tab_widget.cpp  tab_widget.h  terminal_widget.cpp  terminal_widget.h
